# sentiment-api

./: .vercelignore  Cargo.toml  README.md  vercel.json
api/: posts.rs  sentiment.rs  topics.rs
src/: lib.rs
