[package]
name = "sentiment-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "topics"
path = "api/topics.rs"

[[bin]]
name = "posts"
path = "api/posts.rs"

[[bin]]
name = "sentiment"
path = "api/sentiment.rs"

[dependencies]
http = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "tls-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
vercel_runtime = "2.1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
